# codeblocks_https_metadata

src/: CodeBlocks-unix.cbp  CodeBlocks.cbp  CodeBlocks_wx30-msys2.cbp  CodeBlocks_wx30-unix.cbp  CodeBlocks_wx30.cbp  CodeBlocks_wx30_64.cbp  CodeBlocks_wx31-msys2.cbp  CodeBlocks_wx31.cbp  ContribPlugins_wx31-msys2.workspace  res_dev.bat  update.bat  update30.bat  update30_64.bat  update31_msys2.bat
src/build_tools/autorevision/: Makefile.am
src/include/: Makefile.am  cbassert.h  cbexception.h  compilerfactory.h  compilerlist.h  globals.h  logmanager.h  manager.h  projectfileoptionsdlg.h  sdk_common.h  toolsmanager.h
src/plugins/astyle/: astyleconfigdlg.cpp  astyleplugin.cpp
src/plugins/contrib/wxContribItems/wxTreeList/: Makefile.am
src/plugins/contrib/wxContribItems/wxthings/: Makefile.am
src/sdk/: Makefile.am  autodetectcompilers.cpp  cbeditor.cpp  cbplugin.cpp  cbproject.cpp  compiler.cpp  compilerfactory.cpp  compilerlist.cpp  compiletargetbase.cpp  configmanager.cpp  debuggermanager.cpp  editor_hooks.cpp  editorlexerloader.cpp  editormanager.cpp  filemanager.cpp  globals.cpp  loggers.cpp  macrosmanager.cpp  pluginmanager.cpp  pluginsconfigurationdlg.cpp  projectfile.cpp  projectfileoptionsdlg.cpp  projectloader.cpp  sdk_events.cpp  selecttargetdlg.cpp  templatemanager.cpp  toolsmanager.cpp
src/src/: Makefile.am  app.cpp  debuggermenu.cpp  debuggersettingsdlg.cpp  disassemblydlg.cpp  dlgabout.cpp  editkeywordsdlg.cpp  environmentsettingsdlg.cpp  goto_file.cpp  main.cpp  projectmanagerui.cpp  projectoptionsdlg.cpp  watchesdlg.cpp
(+292 files in other folders)
